--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <TextView
         android:id="@+id/textView1"
         android:layout_width="340dp"
-        android:layout_height="60dp"
+        android:layout_height="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -20,50 +20,36 @@
         android:textAllCaps="false"
         android:textColor="#121314"
         android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="340dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="@string/textview"
-        android:textColor="#0a0a0a"
-        android:textSize="36sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1" />
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />
 
 
     <Button
         android:id="@+id/button1"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="50dp"
-        android:text="@string/button1"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="15dp"
         android:background="@color/colorPrimaryDark"
+        android:text="@string/button1"
         android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:theme="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
+        android:theme="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
 
     <Button
         android:id="@+id/button4"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimaryDark"
         android:text="@string/button4"
         android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/button1" />
 
     <Button
@@ -71,24 +57,24 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="15dp"
         android:background="@color/colorPrimaryDark"
         android:text="@string/button2"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/button1"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="15dp"
         android:background="@color/colorPrimaryDark"
         android:text="@string/button3"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/button2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
     <Button
         android:id="@+id/button5"
@@ -119,25 +105,26 @@
         android:layout_width="40dp"
         android:layout_height="148dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="15dp"
         android:background="#7580bd"
         android:onClick="onClickReset"
         android:text="@string/button_clean"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/buttonDivision"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
     <Button
         android:id="@+id/buttonDivision"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="15dp"
         android:background="#7580bd"
+        android:onClick="onClickDivision"
         android:text="@string/button_division"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
     <Button
         android:id="@+id/buttonMultiply"
@@ -146,30 +133,23 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#7580bd"
+        android:onClick="onClickMultiply"
         android:text="@string/button_multiply"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/button6"
         app:layout_constraintTop_toBottomOf="@+id/buttonDivision" />
 
 
-
-
-
-
-
-
-
     <Button
         android:id="@+id/button7"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/button7"
+        android:layout_marginStart="8dp"
         android:background="@color/colorPrimaryDark"
+        android:text="@string/button7"
         android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <Button
         android:id="@+id/button8"
@@ -177,34 +157,32 @@
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:background="@color/colorPrimaryDark"
-        android:layout_marginTop="8dp"
         android:text="@string/button8"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/button7"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />
 
     <Button
         android:id="@+id/button9"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:background="@color/colorPrimaryDark"
         android:text="@string/button9"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/button8"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />
 
     <Button
         android:id="@+id/buttonDot"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#7580bd"
         android:text="@string/button_dot"
         android:textSize="30sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
         app:layout_constraintTop_toBottomOf="@+id/button7" />
 
     <Button
@@ -226,6 +204,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#7580bd"
+        android:onClick="onClickPercent"
         android:text="@string/button_percent"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/button0"
@@ -237,13 +216,12 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:background="#7580bd"
         android:onClick="onClickPlus"
         android:text="@string/button_plus"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/button9"
-        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />
 
     <Button
         android:id="@+id/buttonMinus"
@@ -252,6 +230,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#7580bd"
+        android:onClick="onClickMinus"
         android:text="@string/button_minus"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/buttonPercent"
@@ -262,11 +241,48 @@
         android:layout_width="40dp"
         android:layout_height="148dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:background="#7580bd"
         android:onClick="onClickResult"
         android:text="@string/button_result"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/buttonPlus"
-        app:layout_constraintTop_toBottomOf="@+id/buttonClean" />
+        app:layout_constraintTop_toTopOf="@+id/linearLayout3" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="369dp"
+        android:layout_height="173dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="80dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.997"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="366dp"
+        android:layout_height="151dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="362dp"
+        android:layout_height="79dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
 </android.support.constraint.ConstraintLayout>
